se cambia tipografia titulo

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 .title {
     color: white;
   text-shadow: 2px 2px 4px #000000;
+  font-family:fantasy;
+  font-style: italic;
 }
 .card-text {
     font-size: medium;
